...
                    onChangeText={(name) => this.setState({name})}
                    selectionColor="#6060FF"
                    autoFocus
                    value={this.state.name}
                    style={s.input}
                    maxLength={25}
                    testID="name-input"
                />
                <View style={{position: 'absolute', bottom: this.state.keyboardHeight + 16, left: 20}}>
                    <View style={s.dots}>
                        <View style={[s.dot, {backgroundColor: '#6060FF'}]} />
                        <View style={s.dot} />
                    </View>
                    <Button onPress={this.next} text="Next" width={w('90%')} testID="continue" />
                </View>
            </View>
        );
    }
}

...
