...
                onChangeText={search}
                cancelSearch={cancelSearch}
                onSubmit={onSubmit}
                noIcon
                autoFocus
                enterKeyHint="send"
                testID="username-input"
            />
            <Text style={s.usernameText}>
                Your username is <Text style={{...s.usernameText, fontWeight: '500'}}>{props.user.username}</Text>
            </Text>
            <Button
                onPress={() => {
...
