...
                    onTextChange={(code: string) => this.setState({code})}
                    onFulfill={this.onFullfill}
                    cellStyle={{borderColor: '#6060FF', borderWidth: StyleSheet.hairlineWidth, width: 44, height: 44}}
                    cellStyleFocused={{borderColor: '#6060FF', backgroundColor: '#9090ff'}}
                    textStyle={{color: colors.black, fontSize: 18, fontWeight: 'bold'}}
                    animated={Config.TESTING !== '1'}
                    testID="code-input"
                />
                <Text style={[s.resend, {textDecorationLine: 'underline'}]} onPress={this.resend}>
                    Resend Code
                </Text>
            </View>
        );
...
