...
                    Enable notifications to not miss the latest updates from your friends and family on{' '}
                    <Sticknet fontSize={14} />.
                </Text>
            </View>
            <LottieView ref={ref} source={permissionsAnimation} autoPlay={false} loop={false} style={s.animation} />
            <View style={s.bottomContainer}>
                <Button onPress={requestPermissions} text="Continue" width={320} testID="continue" />
            </View>
        </View>
    );
};

const s = StyleSheet.create({
...
